--- a/public/css/style_perfil.css
+++ b/public/css/style_perfil.css
@@ -1,259 +1,23 @@
-body {
-font-family: Candara !important;
-
-}
-
-*, *:after, *:before {
-  box-sizing:border-box;
-  -moz-box-sizing:border-box;
-  -webkit-box-sizing:border-box;
-
-
-}
-.blue {
-  background: #024677;
-  color: #fff;
-}
-.navbar {
-  padding: 10px 10%;
-}
-
-
-#logo {
-  display: inline-block;
-  margin-top: 7px;
-  color: #fff;
-}
-#link {
-  color: #fff;
-  font-weight: bold;
-  margin: 0 10px;
-}
-
-#sidebarCollapse {
-  color: #fff;
-  background: transparent;
-  outline: none;
-  border: 0px;
-  font-size: 18px;
-  padding: 8px 15px 5px 15px;
-}
-#sidebarCollapse:hover {
-  cursor: pointer;
-  color: #fff;;
-  background: #00b6bf;
-  outline: none;
-}
-.wrapper {
-  display: flex;
-  width: 100%;
-  align-items: stretch;
-}
-
-#sidebar {
-    min-width: 250px;
-    max-width: 250px;
-    margin-top: 70px;
-    background-color: #024677;
-    color: #fff;
-    transition: all .3s;
-}
-#sidebar.active{
-	margin-left: -250px;
-}
-
-#sidebar .sidebar-header{
-	padding: 20px;
-	background: #024677;
-}
-#sidebar ul.components{
-	padding: 20px 0px;
-}
-
-#sidebar ul p{
-	padding: 10px;
-	font-size: 1.1em;
-	display: block;
-}
-
-#sidebar ul li a{
-	padding: 10px 10px 10px 20px;
-	font-size: 1.1em;
-	display: block;
-    color: #fff;
-    font-weight: bold;
-}
-#sidebar ul li a:hover {
-    color: #fff;
-    background: #00b6bf;
-    border-radius: .5rem;
-    text-decoration: none;
-}
-
-#sidebar ul li.active>a,
-a[aria-expanded="true"] {
-    color: #fff;
-    background: #024677;
-}
-a[data-toggle="collapse"] {
-    position: relative;
-}
-.dropdown-toggle::before {
-    display: block;
-    position: absolute;
-    top: 50%;
-    right: 20px;
-    transform: translateY(-50%);
-}
-
-#sidebar {
-    margin-left: -250px;
-  }
-  #sidebar.active{
-    margin-left: 0px;
-    
-  }
-
-.content {
-    width: 100%;
-    padding: 0px;
-    min-height: 83.4vh;
-    transition: all 0.3s;
-    margin-top: 80px;
-}
-
-
-ol#breadcrumb{
-  padding: 0px;
-  list-style: none;
-}
-ol#breadcrumb li {
-  display: inline;
-}
-
-ol#breadcrumb li+li:before {
-  padding: 8px;
-  color: white;
-  content: ">";
-}
-
-.menu-directorio{
-  cursor: pointer;
-  padding: 8px 5px 8px 5px;
-}
-
-.menu-directorio-link{
-  cursor: pointer;
-  padding: 10px 5px 8px 5px;
-}
-
-
-.text_resaltado, .text_resaltado > a{
-  color: #fff; 
-  font-weight: bold;
-  font-size: 18px;
-}
-
-.menu-directorio:hover ,  .menu-directorio-link:hover{
-  background-color: #00b6bf;
-}
-.menu-directorio:active,  .menu-directorio-link:active{
-  background-color: transparent;
-}
-
-#navegacion{
-  background: #0B5D97; 
-  margin: 0px;
-  height:40px;
-}
-
-@media (max-width:800px) {
-  #sidebar {
-    margin-left: -250px;}
-  #sidebar.active{
-	  margin-left: 0px;
-  }
-  #sidebarCollapse span{
-	display: none;
-  }
-  .card {
-    width:100%;
-  }
-  #opc-breadcrum{
-    display: none;
-  }
-}
-@media (max-width:400px) {
-  #sidebar {
-    margin-top: -20px;
-  }
-  #logo {
-    display: none;
-  }
-
-
-}
-
-div .textnav {
-  font-size: .6em ;
-  font-weight: normal;
-  color: #fff;
-  width: 120px;
-    display: inline-block;
-        border-left: 1px solid rgba(255,255,255,.7);     
-    padding-left: 16px;
-    height: 37px;
-    margin-bottom: 0px;
-    line-height: 1em;
-    vertical-align: middle;
-
-}
-
-.navbar-light .navbar-nav .nav-link {
-  color: #fff;
-
-}
-.navbar-light .navbar-nav .nav-link:hover, .navbar-light .navbar-nav .nav-link:focus{
-   color: #fff;
-}
-a.nav-link.usercss{
-padding: 0;
-}
-.usercss p{
-  margin-bottom: 0px;
-  line-height: .8em;
-}
-
-.dropdown-menu {
-    border: 0px;
-    border-radius:0px;
-    margin-right: 30%;
-    background-color:#0B5D97 !important;
-  }
-  .dropdown-item {
-        color: #fff !important;
-  }
-
-  .dropdown-item:focus, .dropdown-item:hover {
-      background-color:#00B6BF !important;
-  }
-
-  a i.zdmi {
-    margin-right: 2px;
-  }
-
   
 .rowgreen{
   margin-top: 30px;
   height: 10px;
   background-color: #00B6BF;
-border-top-left-radius: 5px;
+  border-top-left-radius: 5px;
   border-top-right-radius: 5px;
+  -webkit-box-shadow: 0px 1px 5px 2px rgba(0,0,0,0.24);
+	-moz-box-shadow: 0px 1px 5px 2px rgba(0,0,0,0.24);
+	box-shadow: 0px 1px 5px 2px rgba(0,0,0,0.24);
 }
 .rowhite{
   background-color: #fff;
-  padding: 20px;
   box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.35);
+  
+	padding-left: 3%;
+	padding-right: 3%;
+	padding-bottom: 3%;
+	padding-top: 10px;
+	margin-bottom: 20px;
 }
 
 .formcss div input{
@@ -262,7 +26,10 @@ border-top-left-radius: 5px;
     color: #5e5e5e;
 }
 
-
+ul li a, ul li a:hover{
+  color: #ffffff;
+  text-decoration: none;
+}
 
 #content form{
   margin-top: 90px;
@@ -279,4 +46,11 @@ border-top-left-radius: 5px;
 
 .wtable{
   color: #fff
+}
+
+/* Nuevo Diseño */
+
+.card{
+  width: 90%;
+  height: 13em;
 }
